[tool.poetry]
name = "pid-analyzer"
version = "0.5.3"
description = "Betaflight blackbox PID analyzer"
authors = ["Plasmatree"]
license = "PSFL2"
readme = "README.md"
packages = [{include = "pid_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10.0,<3.12"
scipy = ">=1.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
six = "^1.16.0"

[tool.poetry.scripts]
PIDAnalyzer = 'pid_analyzer:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pydantic = "^1.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
